--- a/vagina/Views/Account/Index.cshtml
+++ b/vagina/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<vagina.Models.UserAccount>
+﻿@model IEnumerable<Systemet.Models.AnvändarKonton>
 
 @{
     ViewBag.Title = "Index";
@@ -12,40 +12,50 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.FörNamn)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.EfterNamn)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Telefon)
         </th>
-       
+        <th>
+            @Html.DisplayNameFor(model => model.Password)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ConfirmPassword)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
+            @Html.DisplayFor(modelItem => item.FörNamn)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LastName)
+            @Html.DisplayFor(modelItem => item.EfterNamn)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UserName)
+            @Html.DisplayFor(modelItem => item.Telefon)
         </td>
-
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
+            @Html.DisplayFor(modelItem => item.Password)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ConfirmPassword)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.AnvändarID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.AnvändarID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.AnvändarID })
         </td>
     </tr>
 }
