--- a/vagina/Views/Shared/_Layout.cshtml
+++ b/vagina/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Log in", "login", "Account")</li>
+                    <li>@Html.ActionLink("Log in", "login", "Konto")</li>
                 </ul>
             </div>
         </div>
