gjort klart lite grejer

--- a/vagina/Views/Konto/inloggad.cshtml
+++ b/vagina/Views/Konto/inloggad.cshtml
@@ -5,6 +5,6 @@
 
 @if (Session["AnvändarID"] != null)
 {
-    <h4> Hejsan @Session["Användarnamn"].ToString()</h4>
+    <h4> Hejsan @Session["Förnamn"].ToString()</h4>
 }
 
