--- a/vagina/Views/Shared/_Layout.cshtml
+++ b/vagina/Views/Shared/_Layout.cshtml
@@ -23,9 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Skapa användare", "Register", "Konto")</li>
-                    <li>@Html.ActionLink("logga in", "Login", "Konto")</li>
+                    @*<li>@Html.ActionLink("Skapa användare", "Register", "Konto")</li>
+                    <li>@Html.ActionLink("logga in", "Login", "Konto")</li>*@
                 </ul>
+                @Html.Partial("LoggaIn")
             </div>
         </div>
     </div>
