skapat grupp bla

--- a/vagina/Views/Shared/loggaIn.cshtml
+++ b/vagina/Views/Shared/loggaIn.cshtml
@@ -7,10 +7,8 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @*<div>
-                    hej @Session["Användarnamn"].ToString() + "!"
-                </div>*@
-                @Html.ActionLink("Hej " + Session["Förnamn"].ToString() + "!" + " användarID " + Session["AnvändarID"].ToString(), "Redigera", routeValues: null)
+                
+                @Html.ActionLink("Hej " + Session["Förnamn"].ToString() + "!" + " användarID " + Session["AnvändarID"].ToString(), "Redigera", "Konto")
             </li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
