--- a/vagina/Views/Grupp/Details.cshtml
+++ b/vagina/Views/Grupp/Details.cshtml
@@ -18,6 +18,14 @@
             @Html.DisplayFor(model => model.GruppNamn)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.LedareID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LedareID)
+        </dd>
+
     </dl>
 </div>
 <p>
