--- a/vagina/Views/Grupp/Delete.cshtml
+++ b/vagina/Views/Grupp/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.GruppNamn)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.LedareID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LedareID)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
