--- a/vagina/Views/Grupp/Index.cshtml
+++ b/vagina/Views/Grupp/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.GruppNamn)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LedareID)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +24,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.GruppNamn)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LedareID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.GruppID }) |
