--- a/vagina/Views/Konto/inloggad.cshtml
+++ b/vagina/Views/Konto/inloggad.cshtml
@@ -6,6 +6,6 @@
 @if (Session["AnvändarID"] != null)
 {
     <h4> Hejsan @Session["Förnamn"].ToString()</h4>
-   
+   @Html.ActionLink("gå med i grupp", "gåmedigrupp", "Grupp");
 }
 
