--- a/vagina/Views/Grupp/Index.cshtml
+++ b/vagina/Views/Grupp/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Systemet.Models.Grupp>
+﻿@model Systemet.Models.Grupp
 
 @{
     ViewBag.Title = "Index";
@@ -6,34 +6,3 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.GruppNamn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LedareID)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.GruppNamn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LedareID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GruppID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GruppID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GruppID })
-        </td>
-    </tr>
-}
-
-</table>
