many to many works.. typ

--- a/vagina/Views/Grupp/bekräftagrupp.cshtml
+++ b/vagina/Views/Grupp/bekräftagrupp.cshtml
@@ -4,5 +4,12 @@
     ViewBag.Title = "bekräftagrupp";
 }
 
-<h2>bekräftagrupp</h2>
+<h2>Vill du gå med i @ViewBag.gruppen ?</h2>
+
+@using (Html.BeginForm("blimedlemigrupp", "grupp", new { namnet = ViewBag.gruppen }))
+{
+
+    <input type="submit" value="gå med" />
+
+}
 
