--- a/vagina/Views/Grupp/minagrupper.cshtml
+++ b/vagina/Views/Grupp/minagrupper.cshtml
@@ -17,7 +17,8 @@
             @Html.DisplayNameFor(model => model.GruppNamn)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LedareID)
+            <div>Gör saker</div>
+            @*@Html.DisplayNameFor(model => model.LedareID)*@
         </th>
         <th></th>
     </tr>
