skapat en tom sida, som fylls på för varje grupp med kalendrar mm

--- a/vagina/Views/Grupp/minagrupper.cshtml
+++ b/vagina/Views/Grupp/minagrupper.cshtml
@@ -28,7 +28,9 @@
 @foreach (var item in ViewBag.minagrupper) {
     <tr>
         <td>
-            @item.GruppNamn
+            <a href="@Url.Action("gruppsida")" title="@item.GruppNamn">
+                @item.GruppNamn
+            </a>          
         </td>
         
         
