jobbat med evenemang

--- a/vagina/Views/Evenemangs/Create.cshtml
+++ b/vagina/Views/Evenemangs/Create.cshtml
@@ -37,10 +37,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Dag, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Tidpunkt, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Dag, htmlAttributes: new { id = "datetimepickerfinal", @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Dag, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.Tidpunkt, htmlAttributes: new { id = "datetimepickerfinal", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Tidpunkt, "", new { @class = "text-danger" })
             </div>
         </div>       
 
