--- a/vagina/Views/Evenemangs/Index.cshtml
+++ b/vagina/Views/Evenemangs/Index.cshtml
@@ -18,14 +18,9 @@
             @Html.DisplayNameFor(model => model.Beskrivning)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StartTid)
+            @Html.DisplayNameFor(model => model.Tidpunkt)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SlutTid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Dag)
-        </th>
+        
         <th></th>
     </tr>
 
@@ -36,15 +31,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Beskrivning)
-        </td>
+        </td>        
         <td>
-            @Html.DisplayFor(modelItem => item.StartTid)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SlutTid)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Dag)
+            @Html.DisplayFor(modelItem => item.Tidpunkt)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.EvenemangID }) |
