--- a/vagina/Views/Evenemangs/Create.cshtml
+++ b/vagina/Views/Evenemangs/Create.cshtml
@@ -29,6 +29,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Plats, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Plats, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Plats, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Beskrivning, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Beskrivning, 10, 55, new { @class = "form-control" })
