--- a/vagina/Views/Evenemangs/evenemangssida.cshtml
+++ b/vagina/Views/Evenemangs/evenemangssida.cshtml
@@ -1,50 +1,115 @@
-﻿@model Systemet.Models.Evenemang
+﻿@model Tuple <Systemet.Models.Evenemang, Systemet.Models.EvenemangsKommentarer>
 
 @{
     ViewBag.Title = "evenemangssida";
 }
 
-<h2>model.Namn</h2>
+<h2>@Model.Item1.Namn</h2>
 
 <p>här ska man kunna se info om vart, när och hur. man ska kunna kommentera eventet och man ska kunna läsa tidigare kommentarer</p>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Åsikter)
-        </th>
-        <th>
-            <div>Gör saker</div>
-
-        </th>
-        <th></th>
-    </tr>
-
-
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Åsikter)
-            </td>
-        </tr>
-    }
-
-</table>
-
-@using (Html.BeginForm("Create", "EvenemangsKommentarersController"))
+@if (Model.Item1.Åsikter != null)
 {
-    <div class="form-group">
-        @Html.LabelFor(model => model.Beskrivning, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(model => model.Beskrivning, 10, 55, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Beskrivning, "", new { @class = "text-danger" })
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Item1.Åsikter)
+            </th>
+            <th>
+                <div>Gör saker</div>
+
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model.Item1.Åsikter)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Text)
+                </td>
+            </tr>
+        }
+    </table>
+}
+
+@using (Html.BeginForm("Kommentera", "EvenemangsKommentarers"))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>EvenemangsKommentarer</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Item2.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Item2.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Item2.Text, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Kommentera" class="btn btn-default" />
+            </div>
         </div>
     </div>
+}
 
-    <input type="submit" value="Create" class="btn btn-default" />
 
 
-@Html.ActionLink("Kommentera", "Create", "EvenemangsKommentarersController")
+
+@*@using (Html.BeginForm("Create", "EvenemangsKommentarers"))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>EvenemangsKommentarer</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Item2.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Item2.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Item2.Text, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Kommentera" class="btn btn-default" />
+            </div>
+        </div>
+    </div>*@
+
+
+
+
+
+
+
+
+
+    @*@Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.Label("Kommentera", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(Model => Model.Åsikter, 10, 55, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <input type="submit" value="Kommentera" class="btn btn-default" />*@
+    @*</div>*@
+
+
+
+
 
