i princip klar med event-kommentarerna! nu måste de bara visas på evenemangssidan på ett enkelt sätt. misstänker att det behöver göras i databasen.

--- a/vagina/Views/EvenemangsKommentarers/komments.cshtml
+++ b/vagina/Views/EvenemangsKommentarers/komments.cshtml
@@ -2,17 +2,15 @@
 
 @{
     ViewBag.Title = "Create";
+
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(new { id = @ViewBag.rättevent.EvenemangID }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>EvenemangsKommentarer</h4>
+        <h4>Skriv kommentar för @ViewBag.rättevent.Namn</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -26,16 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="kommentera" class="btn btn-default" />
+                <input type="submit" value="OK" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
