--- a/vagina/Views/Evenemangs/evenemangssida.cshtml
+++ b/vagina/Views/Evenemangs/evenemangssida.cshtml
@@ -14,11 +14,7 @@
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Item1.Åsikter)
-            </th>
-            <th>
-                <div>Gör saker</div>
-
-            </th>
+            </th>            
             <th></th>
         </tr>
 
@@ -33,7 +29,38 @@
     </table>
 }
 
-@using (Html.BeginForm("Kommentera", "EvenemangsKommentarers"))
+<div id="modal-container" class="modal fade hidden-print" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+        </div>
+    </div>
+</div>
+
+
+@* Create a link that calls the controller method that returns the partial view*@
+@Html.ActionLink("Skriv kommentar", "komments", "EvenemangsKommentarers", new { id = Model.Item1.EvenemangID }, new
+{
+    @* Needed to link to the html of the modal*@
+data_target = "#modal-container",
+    @* Tells the bootstrap javascript to do its thing*@
+    data_toggle = "modal"
+})
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*@using (Html.BeginForm("Kommentera", "EvenemangsKommentarers"))
 {
     @Html.AntiForgeryToken()
 
@@ -56,60 +83,5 @@
             </div>
         </div>
     </div>
-}
-
-
-
-
-@*@using (Html.BeginForm("Create", "EvenemangsKommentarers"))
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>EvenemangsKommentarer</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Item2.Text, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Item2.Text, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Item2.Text, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Kommentera" class="btn btn-default" />
-            </div>
-        </div>
-    </div>*@
-
-
-
-
-
-
-
-
-
-    @*@Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.Label("Kommentera", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(Model => Model.Åsikter, 10, 55, new { @class = "form-control" })
-            </div>
-        </div>
-
-        <input type="submit" value="Kommentera" class="btn btn-default" />*@
-    @*</div>*@
-
-
-
-
+}*@
 
