--- a/vagina/Views/Evenemangs/evenemangssida.cshtml
+++ b/vagina/Views/Evenemangs/evenemangssida.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple <Systemet.Models.Evenemang, Systemet.Models.EvenemangsKommentarer>
+﻿@model Tuple <Systemet.Models.Evenemang, Systemet.Models.EvenemangsKommentarer, ICollection<Systemet.Models.EvenemangsKommentarer>>
 
 @{
     ViewBag.Title = "evenemangssida";
@@ -8,7 +8,7 @@
 
 <p>här ska man kunna se info om vart, när och hur. man ska kunna kommentera eventet och man ska kunna läsa tidigare kommentarer</p>
 
-@if (Model.Item1.Åsikter != null)
+@if (Model.Item3 != null)
 {
     <table class="table">
         <tr>
