Uppgifter: - lagt till uppgifter - ändrat create-metoden och kopplat Grupp och Användare till när en uppgift skapas

--- a/vagina/Views/Grupp/gruppsida.cshtml
+++ b/vagina/Views/Grupp/gruppsida.cshtml
@@ -19,7 +19,7 @@
         <tr>
             <td>
             
-                <a href="@Url.Action("evenemangssida", "Evenemangs", new { idet = item.EvenemangID @*EvenemangID = item.EvenemangID*@ })" title="@item.EvenemangID">
+                <a href="@Url.Action("evenemangssida", "Evenemangs", new { idet = item.EvenemangID })" title="@item.EvenemangID">
                     @item.Namn
                 </a> 
             </td>
@@ -27,5 +27,5 @@
     }
 </table>
 
-<p>här ska det finnas information om dina uppgifter</p>
+<p>@Html.ActionLink("Lägg till Uppgift", "Create", "Uppgifter")</p>
 <p>här ska det finnas notiser om meddelanden mm</p>
