-Lagt till uppgifter på gruppsidan -påbörjat framsidan

--- a/vagina/Views/Grupp/gruppsida.cshtml
+++ b/vagina/Views/Grupp/gruppsida.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple <Systemet.Models.Grupp, ICollection<Systemet.Models.Evenemang>>
+﻿@model Tuple <Systemet.Models.Grupp, ICollection<Systemet.Models.Evenemang>, ICollection<Systemet.Models.Uppgifter>>
 @{
     ViewBag.Title = "Gruppsida";
 }
@@ -28,4 +28,25 @@
 </table>
 
 <p>@Html.ActionLink("Lägg till Uppgift", "Create", "Uppgifter")</p>
-<p>här ska det finnas notiser om meddelanden mm</p>
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayName("Uppgifter")
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model.Item3)
+    {
+        <tr>
+            <td>
+
+                <a href="@Url.Action("UppgiftsSida", "Uppgifter", new { idet = item.UppgifterID })" title="@item.UppgifterID">
+                    @item.Namn
+                </a>
+            </td>
+        </tr>
+    }
+</table>
+
