KontoKontroller: -samtliga listor med objekt skickas till vyn via Tuple (user, grupperna, evenemang, uppgifter) utifrån vilken användare som är inloggad.

--- a/vagina/Views/Konto/inloggad.cshtml
+++ b/vagina/Views/Konto/inloggad.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple <Systemet.Models.AnvändarKonton, ICollection<Systemet.Models.Grupp>, Systemet.Models.Evenemang, Systemet.Models.Uppgifter>
+﻿@model Tuple <Systemet.Models.AnvändarKonton, ICollection<Systemet.Models.Grupp>, List<Systemet.Models.Evenemang>, List<Systemet.Models.Uppgifter>>
 @{
     ViewBag.Title = "inloggad";
 }
@@ -26,7 +26,6 @@
             <div class="well">
 
                 @Html.DisplayFor(modelItem => item.GruppNamn)
-
 
             </div>
             </div>
