inloggad: -lagt till enkel kalender för varje grupp på framsidan

--- a/vagina/Views/Shared/_Layout.cshtml
+++ b/vagina/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
+    @Styles.Render("~/Content/agena.css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
