--- a/vagina/Views/Konto/inloggad.cshtml
+++ b/vagina/Views/Konto/inloggad.cshtml
@@ -1,5 +1,7 @@
-﻿@model Tuple <Systemet.Models.AnvändarKonton, ICollection<Systemet.Models.Grupp>, List<Systemet.Models.Evenemang>, List<Systemet.Models.Uppgifter>>
+﻿@model Tuple<Systemet.Models.AnvändarKonton, ICollection<Systemet.Models.Grupp>, List<Systemet.Models.Evenemang>, List<Systemet.Models.Uppgifter>>
 @{
+
+    <link rel="stylesheet" href="~/Content/agenda.css">
     ViewBag.Title = "inloggad";
 }
 
@@ -15,20 +17,75 @@
 
     <div class="jumbotron">
 
-       <h1>jumbotronen</h1>
+        <h1>jumbotronen</h1>
     </div>
 
-    
-        @Html.DisplayName("Gruppnamn")
     foreach (var item in Model.Item2)
     {
-        <div class="col-lg-6">
+
+        <div class="col-lg-12">
             <div class="well">
 
-                @Html.DisplayFor(modelItem => item.GruppNamn)
 
+                @using (Html.BeginForm("gruppsida", "Grupp", new { item.GruppNamn }))
+                {
+
+
+                    var utvalt = Model.Item3.Where(u => u.grupp.GruppID == item.GruppID).OrderBy(u => u.Tidpunkt).Take(3).ToList();
+
+                    <input type="submit" value="@item.GruppNamn" class="btn btn-default" id="gruppknapp" />
+
+                    <div class="container">
+
+                        <div class="agenda">
+                            <div class="table-responsive">
+                                <table class="table table-condensed table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th>Datum</th>
+                                            <th>Tid</th>
+                                            <th>Evenemang</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+
+                                        @foreach (var ev in utvalt)
+                                        {
+
+                                            <tr>
+                                                <td class="agenda-date" class="active" rowspan="@Model.Item2.Count()">
+                                                    <div class="dayofmonth">@ev.Tidpunkt.Day</div>
+                                                    <div class="dayofweek">@ev.Tidpunkt.DayOfWeek</div>
+                                                    <div class="shortdate text-muted">@ev.Tidpunkt.Month, @ev.Tidpunkt.Year</div>
+                                                </td>
+                                                <td class="agenda-time">
+                                                    @ev.Tidpunkt.ToShortTimeString();
+                                                </td>
+                                                <td class="agenda-events">
+                                                    <div class="agenda-event">
+                                                        @ev.Namn;
+                                                    </div>
+                                                </td>
+                                            </tr>
+
+
+                                            @*<div>
+                                                @Html.DisplayFor(model => ev.Namn)
+                                            </div>*@
+
+                                            @*@Html.DisplayFor(model => model.Item3 , new SelectList(Model.Item3, "id", "name"));*@
+
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                            }
+                        </div>
+                    </div>
+
+                }
             </div>
-            </div>
+        </div>
 
     }
 
