--- a/vagina/Views/Shared/_Layout.cshtml
+++ b/vagina/Views/Shared/_Layout.cshtml
@@ -25,12 +25,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("SENSIFY", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                <ul class="nav navbar-nav">                   
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                 </ul>
